syntax = "proto3";

package starknet.transaction;

import "proto/common.proto";
import "proto/class.proto";

message ResourceLimits {
    starknet.common.Felt252 max_amount = 1;
    starknet.common.Felt252 max_price_per_unit = 2;
}

message ResourceBounds {
    ResourceLimits l1_gas = 1;
    // This can be None only in transactions that don't support l2 gas.
    // Starting from 0.14.0, MempoolTransaction and ConsensusTransaction shouldn't have None here.
    optional ResourceLimits l1_data_gas = 2;
    ResourceLimits l2_gas = 3;
}

message AccountSignature {
    repeated starknet.common.Felt252 parts = 1;
}

message L1HandlerV0 {
    starknet.common.Felt252 nonce = 1;
    starknet.common.Address address = 2;
    starknet.common.Felt252 entry_point_selector = 3;
    repeated starknet.common.Felt252 calldata = 4;
}

message DeclareV3Common {
    starknet.common.Address sender = 1;
    AccountSignature signature = 2;
    starknet.common.Felt252 nonce = 4;
    starknet.common.Hash compiled_class_hash = 5;
    ResourceBounds resource_bounds = 6;
    uint64 tip = 7;
    repeated starknet.common.Felt252 paymaster_data = 8;
    repeated starknet.common.Felt252 account_deployment_data = 9;
    starknet.common.VolitionDomain nonce_data_availability_mode = 10;
    starknet.common.VolitionDomain fee_data_availability_mode = 11;
}

message DeclareV3WithClass {
    DeclareV3Common common = 1;
    starknet.class.Cairo1Class class = 2;
}


// see https://external.integration.starknet.io/feeder_gateway/get_transaction?transactionHash=0x41906f1c314cca5f43170ea75d3b1904196a10101190d2b12a41cc61cfd17c
message InvokeV3 {
    starknet.common.Address sender = 1;
    AccountSignature signature = 2;
    repeated starknet.common.Felt252 calldata = 3;
    ResourceBounds resource_bounds = 4;
    uint64 tip = 5;
    repeated starknet.common.Felt252 paymaster_data = 6;
    repeated starknet.common.Felt252 account_deployment_data = 7;
    starknet.common.VolitionDomain nonce_data_availability_mode = 8;
    starknet.common.VolitionDomain fee_data_availability_mode = 9;
    starknet.common.Felt252 nonce = 10;
}

// see https://external.integration.starknet.io/feeder_gateway/get_transaction?transactionHash=0x29fd7881f14380842414cdfdd8d6c0b1f2174f8916edcfeb1ede1eb26ac3ef0
message DeployAccountV3 {
    AccountSignature signature = 1;
    starknet.common.Hash class_hash = 2;
    starknet.common.Felt252 nonce = 3;
    starknet.common.Felt252 address_salt = 4;
    repeated starknet.common.Felt252 calldata = 5;
    ResourceBounds resource_bounds = 6;
    uint64 tip = 7;
    repeated starknet.common.Felt252 paymaster_data = 8;
    starknet.common.VolitionDomain nonce_data_availability_mode = 9;
    starknet.common.VolitionDomain fee_data_availability_mode = 10;
}